--- a/linked_lists/linked_lists.vcxproj.filters
+++ b/linked_lists/linked_lists.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="linked_list.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
