--- a/linked_lists/linked_lists.vcxproj.filters
+++ b/linked_lists/linked_lists.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="vector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
