seems worse now

--- a/vector/vector.vcxproj.filters
+++ b/vector/vector.vcxproj.filters
@@ -21,12 +21,12 @@
     <ClInclude Include="tests.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="vector.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pch.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="vector.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
