--- a/data-structures/data-structures.vcxproj
+++ b/data-structures/data-structures.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="hash-table-linear-probing.h" />
     <ClInclude Include="hash-table-chaining.h" />
+    <ClInclude Include="hash-function.h" />
     <ClInclude Include="test-hash-table-linear-probing.h" />
     <ClInclude Include="linked-list.h" />
     <ClInclude Include="pch.h" />
