--- a/data-structures/data-structures.vcxproj.filters
+++ b/data-structures/data-structures.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="test-hash-table-chaining.h">
       <Filter>test</Filter>
     </ClInclude>
+    <ClInclude Include="hash-function.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
