--- a/data-structures/data-structures.vcxproj
+++ b/data-structures/data-structures.vcxproj
@@ -151,9 +151,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="binary-search-tree.h" />
     <ClInclude Include="hash-table-linear-probing.h" />
     <ClInclude Include="hash-table-chaining.h" />
     <ClInclude Include="hash-function.h" />
+    <ClInclude Include="test-binary-search-tree.h" />
     <ClInclude Include="test-hash-table-linear-probing.h" />
     <ClInclude Include="linked-list.h" />
     <ClInclude Include="pch.h" />
