--- a/data-structures/data-structures.vcxproj
+++ b/data-structures/data-structures.vcxproj
@@ -155,12 +155,14 @@
     <ClInclude Include="hash-table-linear-probing.h" />
     <ClInclude Include="hash-table-chaining.h" />
     <ClInclude Include="hash-function.h" />
+    <ClInclude Include="red-black-tree.h" />
     <ClInclude Include="test-binary-search-tree.h" />
     <ClInclude Include="test-hash-table-linear-probing.h" />
     <ClInclude Include="linked-list.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="test-hash-table-chaining.h" />
     <ClInclude Include="test-linked-list.h" />
+    <ClInclude Include="test-red-black-tree.h" />
     <ClInclude Include="test-vector.h" />
     <ClInclude Include="test.h" />
     <ClInclude Include="vector.h" />
