--- a/data-structures/data-structures.vcxproj.filters
+++ b/data-structures/data-structures.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClInclude Include="test-binary-search-tree.h">
       <Filter>test</Filter>
     </ClInclude>
+    <ClInclude Include="red-black-tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="test-red-black-tree.h">
+      <Filter>test</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
