red black tree working

--- a/data-structures/data-structures.vcxproj.filters
+++ b/data-structures/data-structures.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="test-red-black-tree.h">
       <Filter>test</Filter>
     </ClInclude>
+    <ClInclude Include="red-black-tree-node.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
