--- a/data-structures/data-structures.vcxproj
+++ b/data-structures/data-structures.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="hash-table-linear-probing.h" />
     <ClInclude Include="hash-table-chaining.h" />
     <ClInclude Include="hash-function.h" />
+    <ClInclude Include="red-black-tree-node.h" />
     <ClInclude Include="red-black-tree.h" />
     <ClInclude Include="test-binary-search-tree.h" />
     <ClInclude Include="test-hash-table-linear-probing.h" />
